<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.android.firstprojectsinglescr.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/timing"
        android:layout_width="169dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/clock"
        android:fontFamily="cursive"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phonenumber"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="17dp" />

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/phone_icon"
        android:fontFamily="cursive"
        android:text="@string/phoneNumber"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/location"
        android:layout_width="280dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/location_icon"
        android:fontFamily="cursive"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:fontFamily="cursive"
        android:text="@string/quote"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/timing"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="cursive"
        android:text="@string/follow_us"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize25"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ratings"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <ImageView
        android:id="@+id/facebook_follow"
        android:layout_width="45dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/facebook_icon"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toTopOf="@+id/ratings"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/instagram_follow"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/instagram_icon"
        app:layout_constraintBottom_toTopOf="@+id/ratings"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/facebook_follow"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/instagram" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="52dp"
        android:fontFamily="cursive"
        android:text="@string/ratings"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize25"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline" />


</android.support.constraint.ConstraintLayout>
